button scaling adjusted and mobile view no longer has horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,13 @@
   body {
     @apply bg-crust text-black;
   }
+
+  /* Hide horizontal scrollbar */
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE/Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Chrome/Safari */
+  }
 }
